--- a/db2.html
+++ b/db2.html
@@ -38,16 +38,9 @@
             display: grid;
             grid-template-rows: auto; /* Auto height to adjust based on content */
         }
-        .half-width {
-            width: 50%;
-            display: inline-block; /* Display containers side by side */
-            box-sizing: border-box;
-            padding: 0; /* Reset padding to avoid extra space */
-        }
-        .right-column .half-width {
-            display: inline-block; /* Display containers side by side */
-            box-sizing: border-box;
-            padding: 0; /* Reset padding to avoid extra space */
+        .right-column {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); /* Two equal-width columns */
         }
     </style>
 </head>
@@ -61,15 +54,11 @@
         </div>
     </div>
    <div class="right-column">
-        <div class="half-width">
-            <div class="iframe-container">
-                <iframe src="https://www.tickcounter.com/widget/countdown/5051472" frameborder="0"></iframe>
-            </div>
+        <div class="iframe-container">
+            <iframe src="https://www.tickcounter.com/widget/countdown/5051472" frameborder="0"></iframe>
         </div>
-        <div class="half-width">
-            <div class="iframe-container">
-                <iframe src="test.html" frameborder="0"></iframe>
-            </div>
+        <div class="iframe-container">
+            <iframe src="test.html" frameborder="0"></iframe>
         </div>
         <div class="iframe-container">
             <iframe src="text_rotator-3.html" frameborder="0"></iframe>
