--- a/db2.html
+++ b/db2.html
@@ -42,7 +42,7 @@
         }
         iframe {
             width: 100%;
-            height: 200px; /* Adjust the height as needed */
+            height: 100%; /* Adjust the height as needed */
             border: none;
         }
     </style>
@@ -50,7 +50,7 @@
 <body>
     <div class="column left-column">
         <div class="iframe-container">
-            <iframe src="https://example.com"></iframe>
+            <iframe src="https://www.weather.gov/"></iframe>
         </div>
         <div class="iframe-container">
             <iframe src="performance-2.html"></iframe>
