--- a/test.html
+++ b/test.html
@@ -9,6 +9,7 @@
         font-family: Arial, sans-serif;
         text-align: center;
         margin-top: 50px;
+        background-color: #9E9C9B
     }
     
     .date {
