--- a/db2.html
+++ b/db2.html
@@ -15,36 +15,53 @@
     </script>
     <style>
         html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        body {
-            display: flex;
-            flex-wrap: wrap; /* Allows items to wrap as needed */
-        }
-        .column {
-            display: flex; /* Applies Flexbox layout to the container */
-            flex-direction: column; /* Stack children vertically */
-            width: 50%; /* Each column takes up half the width of the body */
-        }
-        .iframe-container, .half-width-container {
-            border: 2px solid black;
-            margin: 2px; /* Small margin for spacing */
-            flex-grow: 1; /* Allows containers to grow to fill the space */
-        }
-        .half-width-container {
-            display: flex; /* Applies Flexbox layout */
-            width: 100%; /* Takes the full width of its parent */
-        }
-        .half-width-iframe {
-            flex: 1; /* Each iframe will take up an equal amount of space */
-        }
-        iframe {
-            width: 100%;
-            height: 100%; /* Adjust the height as needed */
-            border: none;
-        }
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box; /* Make sure the box model includes padding and borders */
+}
+
+*, *::before, *::after {
+    box-sizing: inherit; /* Inherit box-sizing from their parent */
+}
+
+body {
+    display: flex;
+    flex-wrap: wrap; /* Allows items to wrap as needed */
+    overflow: hidden; /* Hide overflow to remove scrollbars caused by fractional dimensions or rounding */
+}
+
+.column {
+    display: flex; /* Applies Flexbox layout to the container */
+    flex-direction: column; /* Stack children vertically */
+    width: 50%; /* Each column takes up half the width of the body */
+    height: 100%; /* Ensure columns do not exceed the body height */
+    overflow: hidden; /* Optional: if you still see scrollbars, try applying this */
+}
+
+.iframe-container, .half-width-container {
+    border: 2px solid black;
+    margin: 2px; /* Small margin for spacing */
+    flex-grow: 1; /* Allows containers to grow to fill the space */
+    overflow: hidden; /* Prevent content from overflowing */
+}
+
+.half-width-container {
+    display: flex; /* Applies Flexbox layout */
+    width: calc(100% - 4px); /* Adjust width to account for margins; adjust if necessary */
+}
+
+.half-width-iframe {
+    flex: 1; /* Each iframe will take up an equal amount of space */
+    overflow: hidden; /* Prevent content from overflowing */
+}
+
+iframe {
+    width: 100%;
+    height: 100%; /* Adjust the height as needed */
+    border: none;
+}
+
     </style>
 </head>
 <body>
