--- a/test.html
+++ b/test.html
@@ -6,8 +6,8 @@
 <title>Days Since Last Safety Incident</title>
 <style>
         .text-size {
-        font-size: 20px; /* Adjust this value as needed */
-        color: #fff; /* Optional: change the text color */
+        font-size: 25px; /* Adjust this value as needed */
+        color: black; /* Optional: change the text color */
     }
 
     body {
