--- a/db2.html
+++ b/db2.html
@@ -4,64 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Service Dashboard</title>
-    <script>
-        // Function to perform a hard refresh
-        function hardRefresh() {
-            location.reload(true); // Reload the page, ignoring the cache
-        }
-
-        // Perform a hard refresh every hour (3600000 milliseconds)
-        setInterval(hardRefresh, 3600000);
-    </script>
     <style>
         html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; /* Make sure the box model includes padding and borders */
-}
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-*, *::before, *::after {
-    box-sizing: inherit; /* Inherit box-sizing from their parent */
-}
+        *, *::before, *::after {
+            box-sizing: inherit;
+        }
 
-body {
-    display: flex;
-    flex-wrap: wrap; /* Allows items to wrap as needed */
-    overflow: hidden; /* Hide overflow to remove scrollbars caused by fractional dimensions or rounding */
-}
+        body {
+            display: flex;
+            flex-wrap: wrap;
+            overflow: hidden;
+        }
 
-.column {
-    display: flex; /* Applies Flexbox layout to the container */
-    flex-direction: column; /* Stack children vertically */
-    width: 50%; /* Each column takes up half the width of the body */
-    height: 100%; /* Ensure columns do not exceed the body height */
-    overflow: hidden; /* Optional: if you still see scrollbars, try applying this */
-}
+        .column {
+            display: flex;
+            flex-direction: column;
+            width: 50%;
+            height: 100%;
+            overflow: hidden;
+        }
 
-.iframe-container, .half-width-container {
-    border: 2px solid black;
-    margin: 2px; /* Small margin for spacing */
-    flex-grow: 1; /* Allows containers to grow to fill the space */
-    overflow: hidden; /* Prevent content from overflowing */
-}
+        .iframe-container, .half-width-container {
+            border: 2px solid black;
+            margin: 2px;
+            flex-grow: 1;
+            overflow: hidden;
+        }
 
-.half-width-container {
-    display: flex; /* Applies Flexbox layout */
-    width: calc(100% - 4px); /* Adjust width to account for margins; adjust if necessary */
-}
+        .half-width-container {
+            display: flex;
+            width: calc(100% - 4px);
+            position: relative; /* Add position relative */
+        }
 
-.half-width-iframe {
-    flex: 1; /* Each iframe will take up an equal amount of space */
-    overflow: hidden; /* Prevent content from overflowing */
-}
+        .half-width-iframe {
+            flex: 1;
+            overflow: hidden;
+        }
 
-iframe {
-    width: 100%;
-    height: 100%; /* Adjust the height as needed */
-    border: none;
-}
+        .separator {
+            width: 2px;
+            background-color: black;
+            position: absolute; /* Position separator absolutely */
+            height: 100%; /* Make it the same height as the container */
+            top: 0; /* Align it to the top of the container */
+        }
 
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
     </style>
 </head>
 <body>
@@ -78,6 +77,7 @@ iframe {
             <div class="half-width-iframe">
                 <iframe src="countdown.html"></iframe>
             </div>
+            <div class="separator"></div> <!-- Add separator here -->
             <div class="half-width-iframe">
                 <iframe src="test.html"></iframe>
             </div>
