--- a/db2.html
+++ b/db2.html
@@ -40,20 +40,16 @@
         .half-width-container {
             display: flex;
             width: calc(100% - 4px);
-            position: relative; /* Add position relative */
         }
 
         .half-width-iframe {
             flex: 1;
             overflow: hidden;
+            border-right: 2px solid black; /* Add border on the right of the first half-width iframe container */
         }
 
-        .separator {
-            width: 2px;
-            background-color: black;
-            position: absolute; /* Position separator absolutely */
-            height: 100%; /* Make it the same height as the container */
-            top: 0; /* Align it to the top of the container */
+        .half-width-iframe:last-child {
+            border-right: none; /* Remove border on the last half-width iframe container */
         }
 
         iframe {
@@ -77,7 +73,6 @@
             <div class="half-width-iframe">
                 <iframe src="countdown.html"></iframe>
             </div>
-            <div class="separator"></div> <!-- Add separator here -->
             <div class="half-width-iframe">
                 <iframe src="test.html"></iframe>
             </div>
